--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
           <div class="row">
             <div class="col-lg-6">
               <ul>
-                <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 27 December 2007</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 27 September 2007</li>
                 <li><i class="icofont-rounded-right"></i> <strong>Discord:</strong> domi#3687</li>
               </ul>
             </div>
@@ -279,42 +279,32 @@
 
       <div class="row mt-2">
 
-        <div class="col-md-6 d-flex align-items-stretch">
-          <div class="info-box">
-            <i class="bx bx-map"></i>
-            <h3>My Address</h3>
-            <p>1275 E University Dr</p>
-            <p>Unit 212</p>
-            <p>Tempe, AZ 85281</p>
-          </div>
-        </div>
-
-        <div class="col-md-6 mt-4 mt-md-0 d-flex align-items-stretch">
+        
           <div class="info-box">
             <i class="bx bx-share-alt"></i>
             <h3>Social Profiles</h3>
             <div class="social-links">
-              <a href="https://www.linkedin.com/in/rajaprerak" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-              <a href="https://www.github.com/rajaprerak" target="_blank" class="github"><i class="bx bxl-github"></i></a>
-              <a href="mailto:rajaprerak@gmail.com" target="_blank" class="google"><i class="bx bxl-google"></i></a>
+              <a href="https://www.instagram.com/domivltn/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
+              <a href="https://www.github.com/domilx" target="_blank" class="github"><i class="bx bxl-github"></i></a>
+              <a href="mailto:domenico2727@gmail.com" target="_blank" class="google"><i class="bx bxl-google"></i></a>
 
             </div>
           </div>
-        </div>
+        
 
         <div class="col-md-6 mt-4 d-flex align-items-stretch">
           <div class="info-box">
             <i class="bx bx-envelope"></i>
             <h3>Email</h3>
-            <p>rajaprerak@gmail.com</p>
-            <p>pkraja@asu.edu</p>
+            <p>domenico2727@gmail.com</p>
+            <p>domenico@domidev.net</p>
           </div>
         </div>
         <div class="col-md-6 mt-4 d-flex align-items-stretch">
           <div class="info-box">
             <i class="bx bx-phone-call"></i>
-            <h3>Contact</h3>
-            <p>+1 480-401-8112</p>
+            <h3>Discord</h3>
+            <p>domi#3687</p>
           </div>
         </div>
       </div>
