--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           <img src="./assets/me.jpg" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <p>Hi! My name is Domenico Valentino, i'm 14 and live in Montreal, Canada. I currently attend a french High school but english is still my first langauage. Ever since I was a kid i've always felt a little connection to technology. If it was messing on the school computers or on the family Mac (don't worry I have a gaming pc now), i've always found pleasure in that domain. As time went on I drifted torwards more complex things such as arduinos and coding. I now find myself coding in many diffrient langauages, making autmated robots and am participating in FIRST, a worldwide elite robotics program. As for this website, it has the intent to expose myself as a person on the internet and shine light on the projects that I've made.
+          <p>Hi! My name is Domenico Valentino, i'm 14 and live in Montreal, Canada. I currently attend a french High school but english is still my first language. Ever since I was a kid i've always felt a little connection to technology. If it was messing on the school computers or on the family Mac (don't worry I have a gaming pc now), i've always found pleasure in that domain. As time went on I drifted torwards more complex things such as arduinos and coding. I now find myself coding in many different  langauages, making automated robots and am participating in FIRST, a worldwide elite robotics program. As for this website, it has the intent to expose myself as a person on the internet and shine light on the projects that I've made.
           </p>
           <div class="row">
             <div class="col-lg-6">
