Github no js :(

--- a/assets/github/github.html
+++ b/assets/github/github.html
@@ -37,6 +37,7 @@
       <div id="work">
         <h1>My Work:</h1>
         <div class="projects" id="work_section">
+            <p align="right"><iframe frameborder="0" src="https://itch.io/embed/1292600" width="325" height="167"><a href="https://domidev.itch.io/defcry">DefCry by domi</a></iframe></p>
                         <a href="https://github.com/domilx/catapult" target="_blank">
                         <section>
                             <div class="section_title">catapult</div>
