--- a/index.html
+++ b/index.html
@@ -185,16 +185,7 @@
   <!-- Start Project Section -->
   <section id="portfolio" class="portfolio">
     <div class="container">
-        <html>
-          <head>
-            <title></title>
-          </head>
-          <body>
-            <div class="reposWidgit"></div>
-            <p></p>
-            <iframe frameborder="0" src="https://itch.io/embed/1292600" width="552" height="167"><a href="https://domidev.itch.io/defcry">DefCry by domi</a></iframe>
-          </body>
-        </html>
+      <iframe width="1100" height="1000" src="./assets/github/github.html" frameborder="0" allowfullscreen></iframe>
     </div>
   </section>
 
